redis-queue-helm/gw-mongo.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-nlb-gateway
  namespace: mongo
spec:
  selector:
    istio: ingressgateway

  servers:
  - port:
      number: 443
      name: mongo
      protocol: TCP
    hosts:
    - "*"
